# horizon-OCR-python

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  Dockerfile.gpu  JSON_SCHEMA.md  LICENSE  README.md  config.example.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements.txt
docvision/: __init__.py  config.py  dns_config.py  download_models.py  ssl_config.py  types.py
docvision/api/: __init__.py  server.py
docvision/azure/: __init__.py  classifier.py  cost_tracker.py  doc_intelligence.py  gpt_vision_kie.py  pricing_service.py  response_cache.py
docvision/cli/: __init__.py  __main__.py  main.py
docvision/detect/: __init__.py  craft_net.py  craft_utils.py  layout_doclaynet.py  table_tatr.py  text_craft.py
docvision/extract/: pdf_style_extractor.py
docvision/io/: __init__.py  artifacts.py  image.py  markdown.py  pdf.py  reconstruction.py
docvision/kie/: __init__.py  donut_runner.py  fuse.py  layoutlmv3_runner.py  validators.py
docvision/ocr/: __init__.py  crops.py  targeted_reocr.py  tesseract.py  trocr.py
docvision/pipeline/: __init__.py  orchestrator.py
docvision/preprocess/: __init__.py  enhance.py  geometry.py
docvision/web/: __init__.py  app.py  index.html
docvision/web/static/: app.js  style.css
markdown/Azure_Cloud/: 7147105_BOL_0000.md  7147110_BOL_0000.md  7147122_BOL_0000.md  7147217_BOL_0000.md  7147247_BOL_0000.md  7147249_BOL_0000.md  7147295_BOL_0000.md  7147402_BOL_0000.md  test_invoice.md
markdown/Local/: 7147249_BOL_0000.md
tests/: __init__.py  conftest.py  test_azure_doc_intelligence.py  test_azure_smoke.py  test_classifier.py  test_config.py  test_cost_cache_batch.py  test_fuse.py  test_gpt_vision_kie.py  test_io.py  test_markdown.py  test_phase4_integration.py  test_pipeline.py  test_preprocess.py  test_reconstruction.py  test_targeted_reocr.py  test_types.py  test_validators.py  test_web_features.py
